# rstidal

./: .env.sample  Cargo.toml  LICENSE  README.md
.github/workflows/: rust.yml
src/: auth.rs  client.rs  lib.rs
src/endpoints/: albums.rs  artists.rs  mod.rs  playlists.rs  search.rs  tracks.rs
src/model/: album.rs  artist.rs  mod.rs  playlist.rs  track.rs
tests/files/: album.json  album_tracks.json  artist.json  artist_albums.json  create_playlist.json  playlist.json  playlist_tracks.json  search.json  user_playlists.json
