[package]
name = "rstidal"
version = "0.1.0"
authors = ["4xposed <stokp1@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.11"
reqwest = { version = "0.10", features = ["json"] }
serde = { version = "1.0.115", features = ["derive"] }
serde_json = "1.0.57"
