[package]
name = "rstidal"
description = "Asynchronous client for the Tidal music service API"
version = "0.0.1"
authors = ["4xposed <stokp1@gmail.com>"]
keywords = ["Tidal", "API", "Asynchronous"]
edition = "2018"
license = "MIT OR Apache-2.0"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.11"
reqwest = { version = "0.10", features = ["json"] }
serde = { version = "1.0.115", features = ["derive"] }
serde_json = "1.0.57"
serde_urlencoded = "0.7.0"
thiserror = "1.0"

[dev-dependencies]
mockito = "0.27.0"
tokio = { version = "0.2", features = ["full"] }
dotenv = { version = "0.15.0" }
